--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -1,5 +1,13 @@
+@import url('https://meyerweb.com/eric/tools/css/reset/reset200802.css');
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700');
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
