--- a/weather-app/src/Components/home/home.css
+++ b/weather-app/src/Components/home/home.css
@@ -4,4 +4,16 @@
     justify-content: center;
 
     width: 100%;
+    height: 100%;
+
+    color: white;
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+}
+
+.main-container.day{
+    background: #7db9e8;
+    background: -moz-linear-gradient(-45deg, #7db9e8 2%, #a0ffe8 100%);
+    background: -webkit-linear-gradient(-45deg, #7db9e8 2%,#a0ffe8 100%);
+    background: linear-gradient(135deg, #7db9e8 2%,#a0ffe8 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#a0ffe8',GradientType=1 );
 }
