--- a/weather-app/src/Components/mainWeather/mainWeather.css
+++ b/weather-app/src/Components/mainWeather/mainWeather.css
@@ -5,15 +5,7 @@
     justify-content: center;
 
     text-align: center;
-    width: 100%;
-}
-
-.main-weather.day{
-    background: #7db9e8;
-    background: -moz-linear-gradient(-45deg, #7db9e8 2%, #a0ffe8 100%);
-    background: -webkit-linear-gradient(-45deg, #7db9e8 2%,#a0ffe8 100%);
-    background: linear-gradient(135deg, #7db9e8 2%,#a0ffe8 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#a0ffe8',GradientType=1 );
+    margin-top: auto;
 }
 
 .main-weather h1{
